--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Counter from '../components/counter';
+import OldApp from '../components/oldApp';
 ---
 
 <html lang="en">
@@ -13,6 +14,22 @@ import Counter from '../components/counter';
 	<body>
 		<h1>Astro</h1>
     <div class='bg-red-600'>THIS IS SOME NEW CONTENT</div>
-    <Counter />
+    <Counter client:load />
+{/*
+    <OldApp client:load />
+
+    <script src='https://unpkg.com/pdfjs-dist/'></script>
+    <script src='https://cdnjs.com/libraries/pdf.js'></script>
+
+    Embed PDF by Adobe: https://developer.adobe.com/document-services/apis/pdf-embed/
+
+    So far this still seems like the best option:
+    https://www.npmjs.com/package/react-pdf
+
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.9.179/build/pdf.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.9.179/web/pdf_viewer.min.css" rel="stylesheet">
+*/}
+
+    <script src='../pdf.js'></script>
 	</body>
 </html>
