--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,67 @@
 ---
 import Counter from '../components/counter';
 import OldApp from '../components/oldApp';
+import examplePdf from '../../notes/dummy.pdf';
 ---
 
-<html lang="en">
+<html lang="en" class='h-full w-full'>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-    <div class='bg-red-600'>THIS IS SOME NEW CONTENT</div>
-    <Counter client:load />
+
+
+    <script is:inline src='https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js'></script>
+
 {/*
+    <script is:raw src="html2pdf.bundle.min.js"></script>
+
+    <script is:inline src="es6-promise.auto.min.js"></script>
+    <script is:inline src="jspdf.min.js"></script>
+    <script is:inline src="html2canvas.min.js"></script>
+    <script is:inline src="html2pdf.min.js"></script>
+*/}
+	</head>
+	<body class='h-full w-full'>
+
+    <div id='container' class='flex h-full'>
+      <div class='flex-1'>
+        <label for='pdfUpload'>PDF:</label>
+        <input id='pdfUpload' type='file' accept='.pdf'/>
+        <hr>
+        <label for='htmlUpload'>HTML:</label>
+        <input id='htmlUpload' type='file' accept='.html'/>
+        <textarea id='htmlEditor' class='w-full border-8 align-top h-[95%]'/>
+      </div>
+      <object id='pdfContainer' class='flex-1' data={examplePdf} type="application/pdf">
+        <p>Unable to display PDF file. <a href={examplePdf}>Download</a> instead.</p>
+      </object>
+    </div>
+
+
+    <script src='../pdf.js' ></script>
+	</body>
+</html>
+
+{/*
+The Real Solution:
+https://www.w3docs.com/snippets/html/how-to-embed-pdf-in-html.html
+So as long as we get something that will output a structure similar to examplePdf
+If we can get some data similar to examplePdf, we'll be set 
+*/}
+
+{/*
+    <div class='flex justify-between'>
+      <h1>Astro</h1>
+      <div class='bg-red-600'>THIS IS SOME NEW CONTENT</div>
+      <Counter client:load />
+    </div>
+
+
+
+
     <OldApp client:load />
 
     <script src='https://unpkg.com/pdfjs-dist/'></script>
@@ -28,8 +74,7 @@ import OldApp from '../components/oldApp';
 
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.9.179/build/pdf.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.9.179/web/pdf_viewer.min.css" rel="stylesheet">
-*/}
 
-    <script src='../pdf.js'></script>
-	</body>
-</html>
+    GIVE THIS A TRY TOO:
+    https://artskydj.github.io/jsPDF/docs/index.html
+*/}
