added Tailwind script tag to downloaded HTML, this seems to be about as far as we can go without using npm

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@
               <ul class='list-disc py-2 px-4'>
                 <li>Styling can be done via tailwind classes, or inline styles</li>
                 <li>PDF output supports links</li>
-                <li>Existing HTML files can be be uploaded, edited, and converted</li>
+                <li>Existing HTML files can be uploaded, edited, and converted</li>
                 <li>You can download the current HTML or PDF file using the download dropdown</li>
               </ul>
               <p class='text-center'>Want to see the code?</p>
