fully replaced textarea with codeMirror editor, and updated all related function, also got vim mode working but it requires a page refresh to properly apply

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,9 +34,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/hint/html-hint.min.js" integrity="sha512-oxBKDzXElkyh3mQC/bKA/se1Stg1Q6fm7jz7PPY2kL01jRHQ64IwjpZVsuZojcaj5g8eKSMY9UJamtB1QR7Dmw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/hint/anyword-hint.min.js" integrity="sha512-wdYOcbX/zcS4tP3HEDTkdOI5UybyuRxJMQzDQIRcafRLY/oTDWyXO+P8SzuajQipcJXkb2vHcd1QetccSFAaVw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/keymap/vim.min.js" integrity="sha512-CRScbOTlIJVds3U03uRuDwsYvvq3qFtW5rR7bdlWMzyaKASpibWkS4qhUwE0mfNIpwRurtR3V7bKMLPTtjXusw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/ayu-dark.min.css" integrity="sha512-mV3RUXi1gt22jDb4UyRBFhZVFgAIiOfRE6ul+2l1Hcj6glyg6x4xlnjPH+neGm/t6XrFmsMRu4++McQu0asjqg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
   <body class='h-full w-full flex flex-col lg:flex-row'>
-    <div class='flex h-full flex-1 flex-col'>
+    <div class='flex h-full w-full lg:w-1/2 flex-col'>
       <span class='flex justify-between bg-gray-700 relative text-white'>
         <div class='my-auto'>
           <label class='p-2' for='filename'>Filename:</label>
@@ -44,9 +45,16 @@
         </div>
         <div class='flex'>
           <div id='infoContainer'>
+{/*
+              <button class='text-center bg-gray-700 p-4 w-full mb-4' id='vimMode'>Toggle Vim Mode</button>
+*/}
             <button class='py-2 px-4 h-full fa-solid fa-circle-info' id='infoToggle'></button>
             <div class='hidden absolute right-0 bg-blue-600 w-1/2 p-4' id='infoDropDown'>
-              <h1 class=''>This website allows you to use HTML to create and style a PDF document</h1>
+              <div class='w-full text-center py-2'>
+                <input id='vimMode' type='checkbox'></input>
+                <label for='vimMode'>Enable Vim Mode</label>
+              </div>
+              <h1>This website allows you to use HTML to create and style a PDF document</h1>
               <ul class='list-disc py-2 px-4'>
                 <li>Styling can be done via tailwind classes, or inline styles</li>
                 <li>PDF output supports links</li>
@@ -84,10 +92,12 @@
           </div>
         </div>
       </span>
+{/*
       <textarea id='htmlEditor' class='h-full w-full border-8 resize-none'/>
-      <div id='newEditor'></div>
+*/}
+      <div id='newEditor' class='h-full'></div>
     </div>
-    <object id='pdfContainer' class='flex-1' type='application/pdf'>
+    <object id='pdfContainer' class='w-full lg:w-1/2 h-full' type='application/pdf'>
       <p>Unable to display PDF file. <a id='pdfDisplayError'>Download</a> instead.</p>
     </object>
   </body>
